umrel som skoro pri praci na tomto commite :)

--- a/src/GUI/Main_Window.form
+++ b/src/GUI/Main_Window.form
@@ -72,7 +72,7 @@
                   </Properties>
                   <AuxValues>
                     <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new javax.swing.JTree(root)"/>
-                    <AuxValue name="JavaCodeGenerator_CreateCodePre" type="java.lang.String" value="DefaultMutableTreeNode root = new Tree(array_projects).get_tree();"/>
+                    <AuxValue name="JavaCodeGenerator_CreateCodePre" type="java.lang.String" value="DefaultMutableTreeNode root = new Tree().get_tree();"/>
                   </AuxValues>
                 </Component>
               </SubComponents>
