--- a/src/GUI/Teammates.form
+++ b/src/GUI/Teammates.form
@@ -34,7 +34,7 @@
   <SubComponents>
     <Component class="javax.swing.JComboBox" name="jComboBox1">
       <Properties>
-        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor" postCode="jComboBox1.addItemListener(new ItemListener() {&#xa;            // Listening if a new items of the combo box has been selected.&#xa;            public void itemStateChanged(ItemEvent event) {&#xa;                JComboBox jComboBox1 = (JComboBox) event.getSource();&#xa;                // The item affected by the event.&#xa;                String item = (String)event.getItem();&#xa;                //jList1 = new javax.swing.JList(get_names(item));&#xa;                jList1.setListData(get_names(item));&#xa;            }&#xa;        });">
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor" postCode="jComboBox1.addItemListener(new ItemListener() {&#xa;            // Listening if a new items of the combo box has been selected.&#xa;            public void itemStateChanged(ItemEvent event) {&#xa;                JComboBox jComboBox1 = (JComboBox) event.getSource();&#xa;                // The item affected by the event.&#xa;                String item = (String)event.getItem();&#xa;                //jList1 = new javax.swing.JList(get_names(item));&#xa;                get_names(item);&#xa;            }&#xa;        });">
           <Font name="Segoe UI Semibold" size="18" style="0"/>
         </Property>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
@@ -85,7 +85,7 @@
               <Font name="Segoe UI Semibold" size="18" style="0"/>
             </Property>
             <Property name="model" type="javax.swing.ListModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-              <Connection code="new javax.swing.AbstractListModel&lt;String&gt;() {&#xa;    String[] strings = get_names(array_projects.get(0).getProjectName());&#xa;    public int getSize() { return strings.length; }&#xa;    public String getElementAt(int i) { return strings[i]; }&#xa;}" type="code"/>
+              <Connection code="new javax.swing.AbstractListModel&lt;String&gt;() {&#xa;    //String[] strings = get_names(array_projects.get(0).getProjectName());&#xa;    String[] strings = {&quot;None&quot;};&#xa;    public int getSize() { return strings.length; }&#xa;    public String getElementAt(int i) { return strings[i]; }&#xa;}" type="code"/>
             </Property>
           </Properties>
           <AuxValues>
